--- a/src/components/Register.css
+++ b/src/components/Register.css
@@ -70,3 +70,18 @@
 .login-link:hover {
     color: #0062cc;
 }
+
+@media screen and (max-width: 600px) {
+    .register-container {
+        width: 100%;
+        padding: 20px;
+    }
+
+    .form-control {
+        padding: 10px;
+    }
+
+    .btn-primary {
+        padding: 10px;
+    }
+}
